--- a/Fundraising/wwwroot/MemberCentre/ProjectManage.html
+++ b/Fundraising/wwwroot/MemberCentre/ProjectManage.html
@@ -10,11 +10,14 @@
       integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css"
-    />
     <link rel="stylesheet" href="./stepper.css" />
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
+      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <style>
       .card {
         box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
@@ -23,63 +26,125 @@
         border: 0;
         border-radius: 0.55rem;
         position: relative;
+        width: 20px;
+        margin: 10px;
+      }
+      .act {
+        width: 20px;
       }
     </style>
-    <title>專案清單</title>
+    <title>專案管理</title>
   </head>
   <body>
-    <div class="container">
-      <div class="mx-auto" style="width: 100%">
-        <h5 class="ms-4 mt-3">
+    <div class="container" id="app">
+      <div class="mx-auto ps-4 pt-3" style="width: 100%">
+        <h5>
           <a href="./UserProject.html" class="text-dark text-decoration-none h5"
             >提案紀錄</a
           >
           / <span class="text-decoration-underline">專案管理</span>
         </h5>
       </div>
-      <!-- 贊助者清單 -->
+
       <div class="card mt-3 mx-auto p-3" style="width: 100%">
         <h5 class="m-2">贊助人清單</h5>
-        <table id="table_id" class="table table-hover align-middle text-center">
+        <div class="d-flex justify-content-between">
+          <div>
+            <button type="button" class="btn me-1 btn-secondary">
+              全部贊助
+            </button>
+            <button type="button" class="btn me-1">待開始</button>
+            <button type="button" class="btn me-1">備貨中</button>
+            <button type="button" class="btn me-1">已寄送</button>
+          </div>
+          <div class="d-inline">
+            <input
+              type="text"
+              name="search"
+              id="search"
+              class="form-control me-1"
+              style="display: inline-block; width: 200px"
+            />
+            <button class="btn btn-success me-1">儲存變更</button>
+          </div>
+        </div>
+
+        <table id="table" class="table table-hover align-middle text-center">
           <thead>
             <tr>
               <th scope="col">贊助日期</th>
-              <th scope="col">贊助金額</th>
+              <th scope="col">狀態</th>
               <th scope="col">回饋方案</th>
               <th scope="col">收件人姓名</th>
-              <th scope="col">收件人電話</th>
-              <th scope="col">收件人地址</th>
-              <th scope="col">備註</th>
-              <th scope="col">狀態</th>
+              <th scope="col">贊助合計</th>
+              <th scope="col">操作</th>
+              <th scope="col">更改狀態</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr v-for="order in pjorderlist">
               <!-- 贊助日期 -->
-              <td>2023-01-01</td>
-              <!-- 贊助金額 -->
-              <td>2,000</td>
+              <td>{{order.purchaseTime}}</td>
+              <!-- 狀態 -->
+              <td>{{order.orderStateId}}</td>
               <!-- 回饋方案 -->
-              <td class="text-start" style="max-width: 200px">選擇的方案</td>
+              <td>{{order.planTitle}}</td>
               <!-- 收件人姓名 -->
-              <td>Nick</td>
-              <!-- 收件人電話 -->
-              <td>0912345678</td>
-              <!-- 收件人地址 -->
-              <td class="text-start" style="max-width: 200px">
-                台中市南屯區公益路不知道幾段51號18樓
-              </td>
-              <!-- 備註 -->
-              <td class="text-start" style="max-width: 200px">
-                我叫基德，是個律師。
-              </td>
+              <td>{{order.recipientName}}</td>
+              <!-- 贊助金額 -->
+              <td>$ {{order.planPrice+order.addSponsorship}}</td>
+              <!-- 操作 -->
               <td>
+                <button
+                  class="btn"
+                  data-bs-toggle="modal"
+                  data-bs-target="#orderdetail"
+                  :data-bs-whatever="order.orderId"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="w-6 h-6 act"
+                    style="width: 20px"
+                  >
+                    <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" />
+                    <path
+                      fill-rule="evenodd"
+                      d="M1.323 11.447C2.811 6.976 7.028 3.75 12.001 3.75c4.97 0 9.185 3.223 10.675 7.69.12.362.12.752 0 1.113-1.487 4.471-5.705 7.697-10.677 7.697-4.97 0-9.186-3.223-10.675-7.69a1.762 1.762 0 010-1.113zM17.25 12a5.25 5.25 0 11-10.5 0 5.25 5.25 0 0110.5 0z"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </button>
+                <a class="btn">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+                    class="w-6 h-6 act"
+                  >
+                    <path
+                      d="M4.913 2.658c2.075-.27 4.19-.408 6.337-.408 2.147 0 4.262.139 6.337.408 1.922.25 3.291 1.861 3.405 3.727a4.403 4.403 0 00-1.032-.211 50.89 50.89 0 00-8.42 0c-2.358.196-4.04 2.19-4.04 4.434v4.286a4.47 4.47 0 002.433 3.984L7.28 21.53A.75.75 0 016 21v-4.03a48.527 48.527 0 01-1.087-.128C2.905 16.58 1.5 14.833 1.5 12.862V6.638c0-1.97 1.405-3.718 3.413-3.979z"
+                    />
+                    <path
+                      d="M15.75 7.5c-1.376 0-2.739.057-4.086.169C10.124 7.797 9 9.103 9 10.609v4.285c0 1.507 1.128 2.814 2.67 2.94 1.243.102 2.5.157 3.768.165l2.782 2.781a.75.75 0 001.28-.53v-2.39l.33-.026c1.542-.125 2.67-1.433 2.67-2.94v-4.286c0-1.505-1.125-2.811-2.664-2.94A49.392 49.392 0 0015.75 7.5z"
+                    />
+                  </svg>
+                </a>
+              </td>
+              <td style="width: 150px">
                 <select
                   name="status"
                   id="status"
-                  class="form-select form-select-sm"
+                  class="form-select"
+                  v-if="order.orderStateId!='已寄送'&&order.orderStateId!='已取消'"
                 >
-                  <option value="2">生產階段</option>
+                  <option value="1" v-if="order.orderStateId=='待開始'">
+                    待開始
+                  </option>
+                  <option value="2" v-if="order.orderStateId=='備貨中'">
+                    生產階段
+                  </option>
                   <option value="3">產品寄送</option>
                 </select>
               </td>
@@ -87,22 +152,58 @@
           </tbody>
         </table>
       </div>
+
+      <!-- modal -->
+      <div
+        class="modal fade"
+        id="orderdetail"
+        tabindex="-1"
+        aria-hidden="true"
+        ref="box"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">寄送資訊</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body row">
+              <p>收件人 : {{orderdetail.recipientName}}</p>
+              <p>收件人電話 : {{orderdetail.recipientPhone}}</p>
+              <p>收件人信箱 : {{orderdetail.recipientMail}}</p>
+              <p>收件地址: {{orderdetail.recipientAddress}}</p>
+              <p>備註 : {{orderdetail.note}}</p>
+              <hr />
+              <p>選擇方案 : {{orderdetail.planTitle}}</p>
+              <p>方案價格 : ${{orderdetail.planPrice}}</p>
+              <p>額外贊助 : ${{orderdetail.addSponsorship}}</p>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.min.js"
-      integrity="sha512-QTnb9BQkG4fBYIt9JGvYmxPpd6TBeKp6lsUrtiVQsrJ9sb33Bn9s0wMQO9qVBFbPX3xHRAsBHvXlcsrnJjExjg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../layout/membercentre_layout.js"></script>
-    <script src="./Js_src/ProjectManage.js"></script>
   </body>
+
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"
+  ></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../layout/membercentre_layout.js"></script>
+  <script src="./Js_src/ProjectManage.js"></script>
 </html>
