--- a/Fundraising/wwwroot/Proposal/test.html
+++ b/Fundraising/wwwroot/Proposal/test.html
@@ -11,17 +11,76 @@
 
 <body>
 
-    <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <img class="headernav loginicon" src="../img/loginicon.png" alt="">
-        </a>
+    <nav class="headernav navbar navbar-expand-lg navbar-light bg-white border-bottom" id="header">
 
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <li><a class="dropdown-item" href="#">註冊</a></li>
-            <li><a class="dropdown-item" href="#">登入</a></li>
-        </ul>
-    </div>
+        <div class="container-fluid headernav" id="header-container">
+            <!--LOGO -->
+            <a class="navbar-brand fs-2 headernav" id="header-brand" href="#">咱的募資平台</a>
+
+            <!-- Bar -->
+
+            <div class="collapse navbar-collapse ms-5 headernav" id="headerlinkbar">
+                <!-- LEFT -->
+                <ul class="navbar-nav me-auto fs-5 headernav">
+                    <li class="nav-item headernav">
+                        <a class="nav-link headernav" href="#" id="header-home">首頁</a>
+                    </li>
+                    <li class="nav-item headernav" id="header-items">
+                        <a class="nav-link headernav" href="./myproposal.html">提案</a>
+                    </li>
+                    <li class="nav-item headernav" id="header-items">
+                        <a class="nav-link headernav" href="#">探索</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div class="headernav">
+                <ul class="navbar-nav me-5 headernav">
+                    <li class="headernav" style="padding-right: 10px;">
+                        <div class="search headernav">
+                            <a class="icon headernav" href="#" role="button"></a>
+                            <div class="input headernav">
+                                <input class="headernav" type="text" placeholder="搜尋專案" id="mysearch">
+                            </div>
+                            <span class="clear headernav"></span>
+                        </div>
+                    </li>
+                    <div class="dropdown">
+                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img id="iconimg" class="headernav loginicon" src="../img/loginicon.png" alt="">
+                        </a>
+
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="./test4.html">註冊</a></li>
+                            
+                            <li style="text-align: center;"><a class="dropdown-item" target="_blank" href="../MemberCentre/UserInfo.html">登入</a></li>
+                        </ul>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <input type="button" onclick="test()" value="test">
+
+    <script>
+        function test() {
+            document.querySelector(".dropdown-menu").innerHTML = ` <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="#">個人頁面</a></li>
+                            <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="#">追蹤專案</a></li>
+                            <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="#">贊助紀錄</a></li>
+                            <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="#">提案紀錄</a></li>
+                            <li style="border-bottom: 1px rgb(190, 186, 186) solid;"><a class="dropdown-item"
+                                    href="#">聯絡訊息</a></li>
+                            <li style="text-align: center;"><a class="dropdown-item" href="#">登出</a></li>`
+        }
+    </script>
 </body>
 
 </html>
